# dragon-breath

./: CMakeLists.txt  Dockerfile  README.md  TICKETS.md  docker-compose.yml  task.md
config/: config.json
db/migrations/: 001_init.surql  002_core_tables.surql
proto/: user.proto
scripts/: run_migrations.sh
src/: main.cc
src/controllers/: ApiKeyController.cc  ApiKeyController.h  AuthController.cc  AuthController.h  FileController.cc  FileController.h  HealthController.cc  HealthController.h  NotificationController.cc  NotificationController.h  OpsController.cc  OpsController.h  ProjectController.cc  ProjectController.h  RbacController.cc  RbacController.h  SearchController.cc  SearchController.h  SessionController.cc  SessionController.h  TaskController.cc  TaskController.h  UserController.cc  UserController.h  WebhookController.cc  WebhookController.h
src/db/: SurrealClient.cc  SurrealClient.h
src/filters/: AuthFilter.cc  AuthFilter.h
src/grpc/: UserServiceImpl.cc  UserServiceImpl.h
src/utils/: crypto.hpp  jwt.hpp  logging.hpp  totp.hpp
